log
Wed, Mar 26, 2025  8:16:10 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:37:36 AM: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:35:9: error: 'List {aka struct List}' has no member named 'size'
     list->size = 0;
         ^~
Compilation failed
a5b7bbc
Wed, Mar 26, 2025  8:38:23 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d012f13
Wed, Mar 26, 2025  8:53:17 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
fbebb6a
Wed, Mar 26, 2025  9:00:01 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f41b1d0
Wed, Mar 26, 2025  9:03:31 AM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
378a717
Wed, Mar 26, 2025  9:04:36 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
47d2f53
Wed, Mar 26, 2025  9:09:21 AM: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
82c12b8
Wed, Mar 26, 2025  9:10:46 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ea1dccb
Wed, Mar 26, 2025  9:15:14 AM: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:68:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     if (list = NULL || list->head == NULL || list->current == list->head) return NULL;
              ^
list.c:68:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (list = NULL || list->head == NULL || list->current == list->head) return NULL;
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
87db9d8
Wed, Mar 26, 2025  9:15:37 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
8b0a957
Wed, Mar 26, 2025  9:16:43 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|4
total_score: 25/70
720350e
Wed, Mar 26, 2025  9:18:34 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a530623
Wed, Mar 26, 2025  9:23:25 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:81:11: error: unused variable 'nuevoNodo' [-Werror=unused-variable]
     Node *nuevoNodo = createNode(data);
           ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0f31836
Wed, Mar 26, 2025  9:31:22 AM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  9|3
total_score: 35/70
17172d2
Wed, Mar 26, 2025  9:36:32 AM: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
4e0b025
